# simple-js-todo-list

./: .gitignore  README.MD  main.js  pyproject.toml  run.py
front/: dataclass.js  daycomp.js  index.html  main.js  maker.js
todofl/: mainapp.py
