[tool.poetry]
name = "todofl"
version = "0.1.0"
description = "Just a simple Flask app for learning purposes"
authors = ["ImanHpr <imanhpr1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
